Revert "PRESIDECMS-1983 Fix heading overlapping with text."
This reverts commit d4c1f144c6f0d3b00255178d59a42f7616f82c55.

--- a/system/assets/css/admin/specific/login/loginLayout.less
+++ b/system/assets/css/admin/specific/login/loginLayout.less
@@ -60,9 +60,9 @@ html.presidecms {
 			}
 
 			.login-help-title {
-				min-height : 35px;
-				font-size  : 2em;
-				margin-top : 23px;
+				height         : 35px;
+				font-size      : 2em;
+				margin-top     : 23px;
 			}
 
 			.login-help-image {
